--- a/YummyOctoMeow/YummyOctoMeow/Base.lproj/Main.storyboard
+++ b/YummyOctoMeow/YummyOctoMeow/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,17 +19,41 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-rc-egJ">
-                                <rect key="frame" x="300" y="300" width="0.0" height="0.0"/>
+                                <rect key="frame" x="300" y="580" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mqw-3T-ZoG">
+                                <rect key="frame" x="271" y="285" width="59" height="30"/>
+                                <state key="normal" title="Google+"/>
+                                <connections>
+                                    <action selector="signinWithGoogle:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="gcI-gR-KO3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jV5-hn-f6l">
+                                <rect key="frame" x="267" y="247" width="67" height="30"/>
+                                <state key="normal" title="Facebook"/>
+                                <connections>
+                                    <action selector="signinWithFacebook:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hnj-Kw-nJe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="jV5-hn-f6l" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="5XI-Ml-Yfj"/>
                             <constraint firstAttribute="centerX" secondItem="wcW-rc-egJ" secondAttribute="centerX" id="Gqg-Ad-8Cq"/>
+                            <constraint firstItem="mqw-3T-ZoG" firstAttribute="top" secondItem="jV5-hn-f6l" secondAttribute="bottom" constant="8" id="Pau-80-MKh"/>
                             <constraint firstAttribute="centerY" secondItem="wcW-rc-egJ" secondAttribute="centerY" id="Zdo-6K-Jed"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="wcW-rc-egJ" secondAttribute="bottom" constant="20" id="cVu-cJ-jcr"/>
+                            <constraint firstItem="mqw-3T-ZoG" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="oHr-vz-EIx"/>
+                            <constraint firstItem="mqw-3T-ZoG" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="pgy-Zf-Q14"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Zdo-6K-Jed"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="usernameLabel" destination="wcW-rc-egJ" id="NcS-Js-O2D"/>
